Fix File Not Found Title

--- a/html/FileNotFound.html
+++ b/html/FileNotFound.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- Primary Meta Tags -->
-    <title>AlastairCDN - Internal Error has Occurred</title>
+    <title>AlastairCDN - File Not Found</title>
     <meta name="title" content="AlastairCDN - File Not Found">
     <meta name="description" content="Unfortunately, the file you requested was not found. Please check the URL, and try again.">
     <meta name="theme-color" content="#ff0000">
